force-app/main/default/objects/Carrier__c/Carrier__c.object-meta.xml
<CustomObject>
    <label>Carrier</label>
    <nameField>
        <displayFormat>Car-{000}</displayFormat>
        <label>Carrier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carriers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>