force-app/main/default/objects/Carrier__c/fields/Carrier_Group__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Group__c</fullName>
    <label>Carrier Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Inclusive Airlines</fullName>
            </value>
            <value>
                <fullName>Cathay Pacific</fullName>
            </value>
            <value>
                <fullName>China Southern or China Airlines</fullName>
            </value>
            <value>
                <fullName>Emirates</fullName>
            </value>
            <value>
                <fullName>Etihad</fullName>
            </value>
            <value>
                <fullName>Other Airline</fullName>
            </value>
            <value>
                <fullName>Premium Carrier(Either Singapore Airlines, Cathay Pacific, Emirates or Qantas)</fullName>
            </value>
            <value>
                <fullName>Qantas</fullName>
            </value>
            <value>
                <fullName>Qatar</fullName>
            </value>
            <value>
                <fullName>Singapore Airlines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>