force-app/main/default/objects/Carrier__c/fields/Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Name__c</fullName>
    <formula>Deal__r.Name + &apos;-&apos; + TEXT(Carrier_Group__c)</formula>
    <label>Carrier Name</label>
    <type>Text</type>
</CustomField>