force-app/main/default/objects/Carrier__c/fields/Carrier_Price__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Price__c</fullName>
    <label>Carrier Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>